<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/appHomepageLogo"
        android:layout_width="86dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="162dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="163dp"
        android:contentDescription="@string/home_img_description"
        app:srcCompat="@drawable/timetable" />

    <EditText
        android:id="@+id/appNameText"
        android:textAlignment="center"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appHomepageLogo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="121dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="91dp"
        android:background="@null"
        android:elevation="50dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/app_name"
        android:textColor="@color/black" />


    <Switch
        android:id="@+id/logInSignUpSwitch"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appNameText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="173dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="174dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appNameText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="42dp"
        android:background="@null"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/signUp"
        android:autofillHints="no"/>

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appNameText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="62dp"
        android:background="@null"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/logIn"
        android:autofillHints="no"
        
        />

    <Button
        android:id="@+id/logInSignUpButton"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logInSignUpSwitch"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="143dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="145dp"
        android:text="Button" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logInSignUpButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="53dp"
        android:background="@null"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/appMoto"
        android:textAlignment="center" />


</RelativeLayout>